overflow y shouldn't be an issue

--- a/apps/landing/styles/globals.css
+++ b/apps/landing/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#root {
+	overflow-x: hidden;
+	overflow-y: auto;
+}
